# HW_32

./: .gitignore  CMakeLists.txt  ClassThatUseDB.cpp  ClassThatUseDB.h  DBConnection.cpp  DBConnection.h  IDBConnection.h  README.md  Test.h  main.cpp
